_actually_ fix the line spacing issue for everything, not only paragraphs

--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,10 @@
     padding: 15px 20px;
     flex-wrap: wrap;
     gap: 20px;
+    white-space: normal
 }
 
 .columnChild {
     flex-grow: 1;
     flex-basis: 0px;
-}
-
-.cm-preview-code-block .columnParent br {
-    display: none;
 }
